# adventofcode-2020

./: README.adoc  pyproject.toml
.github/workflows/: build.yml
aoc_20/: __main__.py  day1.py
output/: 10b.txt  13b.txt  15b.txt  16b.txt  18a.txt  18b.txt  20a.txt  21b.txt  23a.txt  23b.txt  9a.txt  9b.txt
solutions/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
tests/: test_solutions.py
