[tool.poetry]
name = "aoc-20"
version = "0.1.0"
description = ""
authors = ["Dain Nilsson <dain@yubico.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
aoc = "aoc_20.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 88
